--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "prettier": "2.8.8",
     "ts-loader": "^9.4.3",
+    "tsconfig-paths-webpack-plugin": "^4.0.1",
     "typescript": "^5.1.3",
     "webpack-dev-server": "^4.15.1"
   }
