--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,17 @@
 {
   "presets": [
-    "@babel/preset-env",
     [
-      "@babel/preset-react",
+      "@babel/preset-env",
       {
-        "runtime": "automatic"
+        "targets": {
+          "node": "current",
+          "edge": "17",
+          "firefox": "60",
+          "chrome": "67",
+          "safari": "11.1"
+        }
       }
-    ]
+    ],
+    "@babel/preset-react"
   ]
 }
