--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "html-webpack-plugin": "^5.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.13.0",
     "serve": "^14.2.0",
     "webpack": "^5.87.0",
     "webpack-cli": "^5.1.4"
