style: layout of the header,main and footer

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,7 +30,8 @@
   "include": [
     "src",
     "**/*.ts",
-    "**/*.tsx"
+    "**/*.tsx",
+    "declare.d.ts"
   ],
   "exclude": [
     "node_modules",
