--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.13.0",
     "serve": "^14.2.0",
+    "styled-components": "^6.0.0-rc.3",
     "webpack": "^5.87.0",
     "webpack-cli": "^5.1.4"
   },
@@ -38,6 +39,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
+    "file-loader": "^6.2.0",
     "prettier": "2.8.8",
     "ts-loader": "^9.4.3",
     "tsconfig-paths-webpack-plugin": "^4.0.1",
