--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "html-webpack-plugin": "^5.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.1",
     "react-router-dom": "^6.13.0",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "serve": "^14.2.0",
     "styled-components": "^6.0.0-rc.3",
     "webpack": "^5.87.0",
