--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "webpack serve --mode development"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "html-webpack-plugin": "^5.5.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
