--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
-    "chart.js": "^4.3.0",
+    "chart.js": "3.9.1",
     "html-webpack-plugin": "^5.5.3",
     "react": "^18.2.0",
-    "react-chartjs-2": "^5.2.0",
+    "react-chartjs-2": "4.3.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.13.0",
