--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "start": "webpack serve --mode development"
   },
   "dependencies": {
+    "@types/react-map-gl": "^6.1.3",
     "axios": "^1.4.0",
     "chart.js": "3.9.1",
     "html-webpack-plugin": "^5.5.3",
+    "mapbox-gl": "^2.15.0",
     "react": "^18.2.0",
     "react-chartjs-2": "4.3.1",
     "react-dom": "^18.2.0",
+    "react-map-gl": "^7.0.25",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.13.0",
     "redux": "^4.2.1",
