--- a/.eslintrc
+++ b/.eslintrc
@@ -131,6 +131,7 @@
     "react/display-name": "off",
     "react/react-in-jsx-scope": "off",
     "react/prop-types": "off",
+    "react/destructuring-assignment": "off",
     "react/no-array-index-key": "off",
     "react/require-default-props": "off",
     "react-hooks/rules-of-hooks": "error",
