--- a/.eslintrc
+++ b/.eslintrc
@@ -77,6 +77,11 @@
     "jsx-a11y/click-events-have-key-events": "off",
     "jsx-a11y/no-static-element-interactions": "off",
     "no-eval": "error",
+    "max-classes-per-file": [
+      "error",
+      3
+    ],
+    "class-methods-use-this": "off",
     "default-param-last": "off",
     "import/extensions": "off",
     "import/prefer-default-export": "off",
