--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "build": "webpack",
-    "start": "webpack serve --mode development"
+    "build": "webpack --config ./webpack.prod.js",
+    "start": "webpack serve --config ./webpack.dev.js"
   },
   "dependencies": {
     "axios": "^1.4.0",
@@ -24,7 +24,8 @@
     "serve": "^14.2.0",
     "styled-components": "^6.0.0-rc.3",
     "webpack": "^5.87.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack-merge": "^5.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.22.5",
@@ -38,6 +39,7 @@
     "@typescript-eslint/eslint-plugin": "^5.60.0",
     "@typescript-eslint/parser": "^5.60.0",
     "babel-loader": "^9.1.2",
+    "clean-webpack-plugin": "^4.0.0",
     "dotenv-webpack": "^8.0.1",
     "eslint": "^8.43.0",
     "eslint-config-airbnb": "^19.0.4",
