--- a/package.json
+++ b/package.json
@@ -2,14 +2,18 @@
   "name": "currencyTracker",
   "version": "1.0.0",
   "main": "index.js",
+  "homepage": "https://denbarabraza.github.io/currencyTracker",
   "license": "MIT",
   "scripts": {
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build",
     "build": "webpack --config ./webpack.prod.js",
     "start": "webpack serve --config ./webpack.dev.js"
   },
   "dependencies": {
     "axios": "^1.4.0",
     "chart.js": "3.9.1",
+    "gh-pages": "^5.0.0",
     "html-webpack-plugin": "^5.5.3",
     "mapbox-gl": "^2.15.0",
     "react": "^18.2.0",
