--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "predeploy": "yarn run build",
     "deploy": "gh-pages -d build",
     "build": "webpack --config ./webpack.prod.js",
-    "start": "webpack serve --config ./webpack.dev.js"
+    "start": "webpack serve --config ./webpack.dev.js",
+    "test": "jest"
   },
   "dependencies": {
     "axios": "^1.4.0",
@@ -35,6 +36,10 @@
     "@babel/core": "^7.22.5",
     "@babel/preset-env": "^7.22.5",
     "@babel/preset-react": "^7.22.5",
+    "@jest/globals": "^29.6.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/react-hooks": "^8.0.1",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
     "@types/react": "^18.2.13",
@@ -57,10 +62,14 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "file-loader": "^6.2.0",
+    "jest": "^29.6.0",
+    "jest-environment-jsdom": "^29.6.0",
     "prettier": "2.8.8",
+    "ts-jest": "^29.1.1",
     "ts-loader": "^9.4.3",
     "tsconfig-paths-webpack-plugin": "^4.0.1",
     "typescript": "^5.1.3",
-    "webpack-dev-server": "^4.15.1"
+    "webpack-dev-server": "^4.15.1",
+    "whatwg-fetch": "^3.6.2"
   }
 }
