--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "deploy": "gh-pages -d build",
     "build": "webpack --config ./webpack.prod.js",
     "start": "webpack serve --config ./webpack.dev.js",
-    "test": "jest"
+    "test": "jest",
+    "cypress:open": "cypress open"
   },
   "dependencies": {
     "axios": "^1.4.0",
@@ -49,6 +50,7 @@
     "@typescript-eslint/parser": "^5.60.0",
     "babel-loader": "^9.1.2",
     "clean-webpack-plugin": "^4.0.0",
+    "cypress": "^12.16.0",
     "dotenv-webpack": "^8.0.1",
     "eslint": "^8.43.0",
     "eslint-config-airbnb": "^19.0.4",
