--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "chart.js": "3.9.1",
     "gh-pages": "^5.0.0",
     "html-webpack-plugin": "^5.5.3",
+    "local-cypress": "^1.2.6",
     "mapbox-gl": "^2.15.0",
     "react": "^18.2.0",
     "react-chartjs-2": "4.3.1",
@@ -37,6 +38,7 @@
     "@babel/core": "^7.22.5",
     "@babel/preset-env": "^7.22.5",
     "@babel/preset-react": "^7.22.5",
+    "@cypress/webpack-preprocessor": "^5.17.1",
     "@jest/globals": "^29.6.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
