--- a/.eslintrc
+++ b/.eslintrc
@@ -118,6 +118,7 @@
       }
     ],
     "no-shadow": "off",
+    "no-console": "off",
     "no-continue": "off",
     "no-restricted-syntax": "off",
     "no-debugger": "error",
