--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
-    "chart.js": "3.9.1",
+    "chart.js": "^4.3.0",
     "html-webpack-plugin": "^5.5.3",
     "local-cypress": "^1.2.6",
     "mapbox-gl": "^2.15.0",
     "react": "^18.2.0",
-    "react-chartjs-2": "4.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-map-gl": "^7.0.25",
     "react-redux": "^8.1.1",
